force-app/main/default/objects/Truck_Driver__c/Truck_Driver__c.object-meta.xml
<CustomObject>
    <label>Truck Driver</label>
    <nameField>
        <label>Truck Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Truck Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>