force-app/main/default/objects/Truck_Driver__c/fields/CalBgColor__c.field-meta.xml
<CustomField>
    <fullName>CalBgColor__c</fullName>
    <description>Truck Schedule Event background color</description>
    <inlineHelpText>Must be CSS compatible ( red, #EEFF09, rgba(237, 134, 098, 0.4) )</inlineHelpText>
    <label>Calendar Background Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>