force-app/main/default/objects/Truck_Driver__c/fields/CalBorderColor__c.field-meta.xml
<CustomField>
    <fullName>CalBorderColor__c</fullName>
    <description>Truck Schedule event border color</description>
    <inlineHelpText>Must be CSS compatible ( red, #EEFF09, rgba(237, 134, 098, 0.4) )</inlineHelpText>
    <label>Calendar Border Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>