force-app/main/default/objects/Truck_Driver__c/fields/CalTextColor__c.field-meta.xml
<CustomField>
    <fullName>CalTextColor__c</fullName>
    <description>Truck Schedule event text color</description>
    <inlineHelpText>Must be CSS compatible ( red, #EEFF09, rgba(237, 134, 098, 0.4) )</inlineHelpText>
    <label>Calendar Text Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>